# totalsegmentator2D

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
assets/: sample_chexpert.nrrd  sample_s0332.nrrd  sample_s0521.nrrd  sample_s0616.nrrd
doc/: available_models.md
test/: test_000_env.py  test_010_database.py  test_020_predict_default.py  test_030_cli.py  test_cli.py  test_database.py  test_predict_default.py  test_predict_multi.py  test_result.py  test_torch.py  test_ts2d.py  utils.py
ts2d/: __init__.py  __main__.py  main.py  tool.py
ts2d/core/inference/: database.py  nnu.py  prediction_worker.py  predictor.py  wrapper.py  zoo.py
ts2d/core/util/: color.py  config.py  file.py  image.py  log.py  meta.py  path.py  sitk_util.py  temp.py  types.py  util.py
ts2d/data/: config.json  label-colors.csv  shared.json
