[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts2d"
version = "0.0.1"
description = "A tool for rapid anatomical structure detection and analysis."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2.0" }
authors = [
  { name = "bsabrows", email = "bertram.sabrowsky-hirsch@risc-software.at" }
]
urls = { Homepage = "https://github.com/risc-mi/totalsegmentator2D" }
requires-python = ">=3.12"
dependencies = [
    "simpleitk",
    "pandas",
    "gdown",
    "dload",
    "psutil",
    "pytest"
]
classifiers = [
  "Programming Language :: Python",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ts2d*"]

[tool.setuptools.package-data]
"*" = [
  "ts2d/data/*"
]