[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts2d"
version = "1.0.0"
description = "A tool for rapid anatomical structure detection and analysis."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache 2.0" }
authors = [
  { name = "bsabrows", email = "bertram.sabrowsky-hirsch@risc-software.at" }
]
urls = { Homepage = "https://github.com/risc-mi/totalsegmentator2D" }
requires-python = ">=3.12"
dependencies = [
    "torch~=2.7.0",
    "torchvision",
    "torchaudio",
    "simpleitk~=2.5.2",
    "pandas~=2.3.1",
    "gdown~=5.2.0",
    "dload==0.6",
    "psutil~=7.0",
    "pytest~=8.4"
]
classifiers = [
  "Programming Language :: Python",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ts2d*"]

[tool.setuptools.package-data]
"*" = [
  "ts2d/data/*"
]