[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts2d"
version = "1.1.2"
description = "A tool for rapid anatomical structure detection and analysis."
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "bsabrows", email = "bertram.sabrowsky-hirsch@risc-software.at" }
]
urls = { Homepage = "https://github.com/risc-mi/totalsegmentator2D" }
requires-python = ">=3.12"
dependencies = [
    "torch~=2.7.0",
    "torchvision",
    "torchaudio",
    "simpleitk~=2.5.2",
    "pandas~=2.3.1",
    "gdown~=5.2.0",
    "dload==0.6",
    "psutil~=7.0",
    "nnunetv2ml==2.6.2",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
ts2d = "ts2d.main:ts2d_entry_point"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ts2d*"]

[tool.setuptools.package-data]
"*" = ["data/**"]